--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/py5gol/vanilla-basic#readme",
   "dependencies": {
+    "@azure/static-web-apps-cli": "^0.8.3",
+    "azure-functions-core-tools": "^3.0.4502",
     "eslint-friendly-formatter": "^4.0.1",
     "express": "^4.18.1",
     "nodemon": "^2.0.16",
